username overflow fixed

--- a/src/modules/core/components/header/header-main/menus/profile-menu/profile-menu.scss
+++ b/src/modules/core/components/header/header-main/menus/profile-menu/profile-menu.scss
@@ -19,6 +19,7 @@
   @include font($primary-orange, 18px, 600, normal);
   margin-bottom: 13px;
   font-family: $EBGaramond;
+  word-break: break-word;
 }
 
 .create-acc {
